# MusicEditor_Windows

./: .gitignore  .gitmodules  CMakeLists.txt  copystatusdialog.cpp  copystatusdialog.h  copystatusdialog.ui  editor.cpp  editor.h  editor.ui  flaccontainer.cpp  flaccontainer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  songlistobject.cpp  songlistobject.h  songlistobject.ui
